src/index.css
html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: #f4f4f9;
  /* background: linear-gradient(
    45deg,
    #f4f4f9 0%,
    rgba(88, 111, 124, .25) 100%
  ); */
  background-repeat: no-repeat;
  background-attachment: fixed;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

p,
span,
ol,
ul {
  color: #2f3c43;
}

h2,
h3 {
  margin-top: 0;
  color: #586f7c;
}

input[type="text"],
input[type="password"] {
  height: 35px;
  padding: 2px 4px;
}

button,
input,
textarea {
  background-color: #ecf0f1;
  color: #2f3c43;
  border: none;
  outline: none;
  border-radius: 2px;
  font-size: 18px;
}

button {
  padding: 2px 12px;
  height: 35px;
  text-align: center;
  color: #ecf0f1;
  background-color: #586f7c;
}

button:hover {
  cursor: pointer;
  background-color: #2f4550;
}

a {
  text-decoration: none;
  padding: 10px;
  color: #586f7c;
  border-radius: 4px;
  text-align: center;
}

a:hover {
  cursor: pointer;
  color: #2f4550;
  background-color: #f4f4f9;
}

.active-nav {
  color: #f4f4f9;
  background-color: #4b7181;
  border-radius: 0px;
}

.button-full {
  width: 100%;
}

.button-half {
  width: 50%;
}

.button-quarter {
  width: 25%;
}

.button-eighth {
  width: 12.5%;
}

.form-itr-input-wrapper {
  display: grid;
  grid-template-columns: 1.75fr 0.5fr;
  grid-gap: 4px;
}

.form-itr-input {
  display: grid;
  grid-auto-flow: row;
  grid-gap: 8px;
}

.form-itr-button-wrapper {
  align-self: flex-start;
  justify-self: end;
}

.form-ing-inst-grid {
  display: grid;
  grid-template-columns: 0.075fr 1fr;
  grid-gap: 2px;
  align-items: center;
}

.form-ing-inst-grid span {
  font-size: 18px;
  color: #586f7c;
}

.form-ing-inst-grid textarea {
  height: 75px;
}

.form-minus-button {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.form-plus-button {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.form-plus-button-borders {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

textarea {
  width: 100%;
  height: 115px;
  resize: none;
}

.menu-bar-wrapper {
  display: grid;
  grid-template-rows: repeat(6, 1fr);
  align-items: center;
  position: absolute;
  top: -210px;
  bottom: 0;
  left: 0;
  right: 0;
  height: 250px;
  z-index: 900;
  background: #fafafa;
  transition: top 225ms ease-in-out;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
}

.menu-bar-wrapper-open {
  top: 0;
}

.menu-bar-header {
  margin: 0;
  font-size: 32px;
  color: #16a085;
}

.site-icon {
  font-size: 32px;
}

.nav-wrapper {
  justify-self: end;
}

.login,
.nav {
  display: grid;
  align-items: center;
  grid-gap: 4px;
}

.login {
  grid-auto-flow: row;
}

.user-menu {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 4px;
  align-items: center;
  justify-content: center;
  height: 38px;
}

/** MAIN **/

.main-wrapper {
  margin-top: 65px;
  padding: 8px;
}

.main-container {
  display: grid;
  grid-gap: 8px;
  width: 100%;
  border-radius: 2px;
  background: #fafafa;
  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
}

.main-container > button {
  width: 120px;
  align-self: flex-end;
}

.main-content {
  grid-template-columns: 0.25fr 1fr;
}

.recipe-rows-container {
  display: grid;
  grid-auto-flow: row;
}

.recipe-row {
  padding: 8px;
  background: transparent;
  border-bottom: 1px solid #ecf0f1;
  display: grid;
  grid-template-columns: 4fr 0.5fr;
  align-items: center;
}

.recipe-row:last-of-type {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.recipe-row h3 {
  color: #586f7c;
}

.recipe-row:hover {
  cursor: pointer;
  background: #ecf0f1;
}

.recipe-instruction-item {
  font-size: 24px;
}

.recipe-instruction-item span {
  font-size: 14px;
  font-weight: normal;
}

.recipe-comment-container {
  margin: 16px 0px;
  display: grid;
  padding: 8px 0px;
  grid-auto-flow: row;
  grid-gap: 8px;
  align-items: center;
  margin-bottom: 16px;
  border-bottom: 1px solid #586f7c;
}

.recipe-comment-info {
  display: grid;
  grid-gap: 4px;
  grid-auto-flow: column;
  justify-content: start;
}

.recipe-comment-info span {
  font-size: 12px;
  font-style: italic;
  color: #9db2b7;
}

.content-section {
  background-color: transparent;
  padding: 8px;
}

.content-section h1 {
  margin: 0px;
  font-style: italic;
  color: #586f7c;
}

.content-section-top {
  display: grid;
  grid-auto-flow: column;
  align-items: center;
}

.content-section-top-buttons {
  justify-self: end;
  display: grid;
  grid-gap: 4px;
  grid-auto-flow: column;
}

.content-section hr {
  border: 0.5px solid #586f7c;
  color: transparent;
  background: transparent;
}

.content-section h3 {
  margin: 0px;
  color: #586f7c;
}

.content-section ol,
.content-section ul {
  margin-top: 2px;
}

.align-start {
  align-self: flex-start;
}

.grid-form-row {
  display: grid;
  grid-auto-flow: row;
  grid-gap: 8px;
}

.grid-form-row label {
  font-style: italic;
  font-size: 18px;
  color: #586f7c;
}

.profile-wrapper {
  display: grid;
  grid-gap: 4px;
  grid-auto-flow: row;
}

@media screen and (min-width: 768px) {
  .active-nav {
    border-radius: 2px;
  }

  .nav {
    grid-auto-flow: column;
  }

  .login-container {
    min-height: 300px;
    width: 600px;
  }

  .menu-bar-wrapper {
    position: fixed;
    top: 0;
    display: grid;
    height: 50px;
    grid-template-columns: 0.5fr 1fr;
    align-items: center;
    background-color: #fafafa;
    padding: 8px 16px;
  }

  .main-wrapper {
    margin: 84px auto;
    width: 75%;
  }

  .content-section {
    padding: 16px;
  }

  .grid-form-row {
    width: 75%;
  }

  .user-menu,
  .login {
    grid-auto-flow: column;
    justify-self: end;
  }
}

@media screen and (min-width: 885px) {
  .menu-bar-wrapper {
    position: fixed;
    top: 0;
    display: grid;
    height: 50px;
    grid-template-columns: 0.5fr 1fr;
    align-items: center;
    background-color: #fafafa;
    padding: 8px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .main-wrapper {
    width: 65%;
  }

  .menu-bar-wrapper {
    padding: 8px 64px;
  }
}

@media screen and (min-width: 1162px) {
  .menu-bar-wrapper {
    height: 38px;
  }
}

